@@ -7843,7 +7843,7 @@ argument_list|)
 operator|<<
 name|QString
 argument_list|(
-literal|"12:34:56"
+literal|"12:34:56.000"
 argument_list|)
 expr_stmt|;
 name|QTest
@@ -7879,7 +7879,7 @@ argument_list|)
 operator|<<
 name|QString
 argument_list|(
-literal|"2002-01-01T12:34:56"
+literal|"2002-01-01T12:34:56.000"
 argument_list|)
 expr_stmt|;
 name|QTest
