@@ -4507,7 +4507,7 @@ argument_list|)
 operator|<<
 name|QString
 argument_list|(
-literal|"1978-11-09T13:28:34"
+literal|"1978-11-09T13:28:34.000"
 argument_list|)
 expr_stmt|;
 name|QTest
@@ -4544,7 +4544,7 @@ argument_list|)
 operator|<<
 name|QString
 argument_list|(
-literal|"1978-11-09T13:28:34Z"
+literal|"1978-11-09T13:28:34.000Z"
 argument_list|)
 expr_stmt|;
 name|QDateTime
@@ -4587,7 +4587,7 @@ name|dt
 operator|<<
 name|QString
 argument_list|(
-literal|"1978-11-09T13:28:34+05:30"
+literal|"1978-11-09T13:28:34.000+05:30"
 argument_list|)
 expr_stmt|;
 name|dt
@@ -4609,7 +4609,7 @@ name|dt
 operator|<<
 name|QString
 argument_list|(
-literal|"1978-11-09T13:28:34-02:00"
+literal|"1978-11-09T13:28:34.000-02:00"
 argument_list|)
 expr_stmt|;
 name|QTest
@@ -4647,6 +4647,45 @@ argument_list|)
 operator|<<
 name|QString
 argument_list|()
+expr_stmt|;
+name|QTest
+operator|::
+name|newRow
+argument_list|(
+literal|"999 milliseconds UTC"
+argument_list|)
+operator|<<
+name|QDateTime
+argument_list|(
+name|QDate
+argument_list|(
+literal|2000
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|)
+argument_list|,
+name|QTime
+argument_list|(
+literal|13
+argument_list|,
+literal|28
+argument_list|,
+literal|34
+argument_list|,
+literal|999
+argument_list|)
+argument_list|,
+name|Qt
+operator|::
+name|UTC
+argument_list|)
+operator|<<
+name|QString
+argument_list|(
+literal|"2000-01-01T13:28:34.999Z"
+argument_list|)
 expr_stmt|;
 block|}
 end_function
@@ -4758,7 +4797,7 @@ name|str2
 argument_list|,
 name|QString
 argument_list|(
-literal|"1995-05-20T12:34:56"
+literal|"1995-05-20T12:34:56.000"
 argument_list|)
 argument_list|)
 expr_stmt|;
