@@ -6619,8 +6619,6 @@ operator|::
 name|toStringDateFormat_data
 parameter_list|()
 block|{
-comment|// Since we can't define an element of Qt::DateFormat, str1 will be the string
-comment|// in TextDate format, and str2 will be the time in ISODate format.
 name|QTest
 operator|::
 name|addColumn
@@ -6628,7 +6626,19 @@ argument_list|<
 name|QTime
 argument_list|>
 argument_list|(
-literal|"t"
+literal|"time"
+argument_list|)
+expr_stmt|;
+name|QTest
+operator|::
+name|addColumn
+argument_list|<
+name|Qt
+operator|::
+name|DateFormat
+argument_list|>
+argument_list|(
+literal|"format"
 argument_list|)
 expr_stmt|;
 name|QTest
@@ -6638,24 +6648,14 @@ argument_list|<
 name|QString
 argument_list|>
 argument_list|(
-literal|"str1"
-argument_list|)
-expr_stmt|;
-name|QTest
-operator|::
-name|addColumn
-argument_list|<
-name|QString
-argument_list|>
-argument_list|(
-literal|"str2"
+literal|"expected"
 argument_list|)
 expr_stmt|;
 name|QTest
 operator|::
 name|newRow
 argument_list|(
-literal|"data0"
+literal|"00:00:00.000"
 argument_list|)
 operator|<<
 name|QTime
@@ -6669,21 +6669,47 @@ argument_list|,
 literal|0
 argument_list|)
 operator|<<
-name|QString
-argument_list|(
-literal|"00:00:00"
-argument_list|)
+name|Qt
+operator|::
+name|TextDate
 operator|<<
 name|QString
 argument_list|(
-literal|"00:00:00"
+literal|"00:00:00.000"
 argument_list|)
 expr_stmt|;
 name|QTest
 operator|::
 name|newRow
 argument_list|(
-literal|"data1"
+literal|"ISO 00:00:00.000"
+argument_list|)
+operator|<<
+name|QTime
+argument_list|(
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|)
+operator|<<
+name|Qt
+operator|::
+name|ISODate
+operator|<<
+name|QString
+argument_list|(
+literal|"00:00:00.000"
+argument_list|)
+expr_stmt|;
+name|QTest
+operator|::
+name|newRow
+argument_list|(
+literal|"Text 10:12:34.000"
 argument_list|)
 operator|<<
 name|QTime
@@ -6697,14 +6723,148 @@ argument_list|,
 literal|0
 argument_list|)
 operator|<<
-name|QString
-argument_list|(
-literal|"10:12:34"
-argument_list|)
+name|Qt
+operator|::
+name|TextDate
 operator|<<
 name|QString
 argument_list|(
-literal|"10:12:34"
+literal|"10:12:34.000"
+argument_list|)
+expr_stmt|;
+name|QTest
+operator|::
+name|newRow
+argument_list|(
+literal|"ISO 10:12:34.000"
+argument_list|)
+operator|<<
+name|QTime
+argument_list|(
+literal|10
+argument_list|,
+literal|12
+argument_list|,
+literal|34
+argument_list|,
+literal|0
+argument_list|)
+operator|<<
+name|Qt
+operator|::
+name|ISODate
+operator|<<
+name|QString
+argument_list|(
+literal|"10:12:34.000"
+argument_list|)
+expr_stmt|;
+name|QTest
+operator|::
+name|newRow
+argument_list|(
+literal|"Text 10:12:34.001"
+argument_list|)
+operator|<<
+name|QTime
+argument_list|(
+literal|10
+argument_list|,
+literal|12
+argument_list|,
+literal|34
+argument_list|,
+literal|001
+argument_list|)
+operator|<<
+name|Qt
+operator|::
+name|TextDate
+operator|<<
+name|QString
+argument_list|(
+literal|"10:12:34.001"
+argument_list|)
+expr_stmt|;
+name|QTest
+operator|::
+name|newRow
+argument_list|(
+literal|"ISO 10:12:34.001"
+argument_list|)
+operator|<<
+name|QTime
+argument_list|(
+literal|10
+argument_list|,
+literal|12
+argument_list|,
+literal|34
+argument_list|,
+literal|001
+argument_list|)
+operator|<<
+name|Qt
+operator|::
+name|ISODate
+operator|<<
+name|QString
+argument_list|(
+literal|"10:12:34.001"
+argument_list|)
+expr_stmt|;
+name|QTest
+operator|::
+name|newRow
+argument_list|(
+literal|"Text 10:12:34.999"
+argument_list|)
+operator|<<
+name|QTime
+argument_list|(
+literal|10
+argument_list|,
+literal|12
+argument_list|,
+literal|34
+argument_list|,
+literal|999
+argument_list|)
+operator|<<
+name|Qt
+operator|::
+name|TextDate
+operator|<<
+name|QString
+argument_list|(
+literal|"10:12:34.999"
+argument_list|)
+expr_stmt|;
+name|QTest
+operator|::
+name|newRow
+argument_list|(
+literal|"ISO 10:12:34.999"
+argument_list|)
+operator|<<
+name|QTime
+argument_list|(
+literal|10
+argument_list|,
+literal|12
+argument_list|,
+literal|34
+argument_list|,
+literal|999
+argument_list|)
+operator|<<
+name|Qt
+operator|::
+name|ISODate
+operator|<<
+name|QString
+argument_list|(
+literal|"10:12:34.999"
 argument_list|)
 expr_stmt|;
 block|}
@@ -6721,49 +6881,35 @@ name|QFETCH
 argument_list|(
 name|QTime
 argument_list|,
-name|t
+name|time
+argument_list|)
+expr_stmt|;
+name|QFETCH
+argument_list|(
+name|Qt
+operator|::
+name|DateFormat
+argument_list|,
+name|format
 argument_list|)
 expr_stmt|;
 name|QFETCH
 argument_list|(
 name|QString
 argument_list|,
-name|str1
-argument_list|)
-expr_stmt|;
-name|QFETCH
-argument_list|(
-name|QString
-argument_list|,
-name|str2
+name|expected
 argument_list|)
 expr_stmt|;
 name|QCOMPARE
 argument_list|(
-name|str1
-argument_list|,
-name|t
+name|time
 operator|.
 name|toString
 argument_list|(
-name|Qt
-operator|::
-name|TextDate
+name|format
 argument_list|)
-argument_list|)
-expr_stmt|;
-name|QCOMPARE
-argument_list|(
-name|str2
 argument_list|,
-name|t
-operator|.
-name|toString
-argument_list|(
-name|Qt
-operator|::
-name|ISODate
-argument_list|)
+name|expected
 argument_list|)
 expr_stmt|;
 block|}
